gui and layout written, done some quick icons

--- a/src/main/resources/bundle.properties
+++ b/src/main/resources/bundle.properties
@@ -6,3 +6,22 @@ quitQuestion=Do you really want to quit?
 yes=Yes
 no=No
 cancel=Cancel
+create=New
+open=Open
+save=Save
+saveAs=Save as ...
+exportText=Export as text
+help=Help
+license=License
+about=About program
+toolbar=Toolbar
+newBook=Add new book
+editBook=Edit selected book
+deleteBook=Delete selected book
+newChapter=Add new chapter
+newPoem=Add new poem
+editSection=Edit selected chapter/poem
+deleteSection=Delete selected chapter/poem
+moveUp=Move selected chapter/poem up
+moveDown=Move selected chapter/poem down
+exportSelectedBookAsText=Export selected book as text
